--- a/Narwhal.App/src/app/app.component.html
+++ b/Narwhal.App/src/app/app.component.html
@@ -1,5 +1,6 @@
 <section>
-  <div id="map"></div>
-  <pre id="info"></pre>
-  <div id="banner" class="banner-webgl"><span class="status"></span></div>
+	<div id="map"></div>
+	<pre id="info"></pre>
+	<app-warning-panel class="warning-panel" [warnings]="warnings"></app-warning-panel>
+	<div id="banner" class="banner-webgl"><span class="status"></span></div>
 </section>
