--- a/Narwhal.App/src/app/warning-panel/warning-panel.component.html
+++ b/Narwhal.App/src/app/warning-panel/warning-panel.component.html
@@ -1,7 +1,7 @@
-<p *ngIf="warnings?.length"><b>WARNING</b></p>
+<div *ngIf="warnings?.length"><b>WARNING</b></div>
 
-<p *ngFor="let warning of warnings">
+<div *ngFor="let warning of warnings">
 	Vessel <b>{{ warning.vessel1 }}</b> and <b>{{ warning.vessel2 }}</b> will be
-	close at
+	close to each other at
 	<b>{{ warning.time | date: "short" }}</b>
-</p>
+</div>
